--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,8 @@ body {
 header,
 main,
 footer {
+  width: 100%;
+
   background-color: #ffffffc7;
   border-radius: 15px;
   padding: 0.5rem;
@@ -32,99 +34,102 @@ footer {
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
-header {
+header{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: .5rem;
 }
-
 .logo-box{
   display: flex;
-  align-items: baseline;
+  justify-content: center;
 }
-.pen {
-  height: 5rem;
-  padding: 10px;
+.logo-box>img{
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  margin: 0 10px;
 }
-.searcher{
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-}
-main {
+.filter{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: .5rem;
+}
+
+input[type='text']{
+  padding: 5px;
+  border-radius: 10px;
+
+}
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   flex-grow: 5;
-  gap: 1rem;
-  align-items: center;
+  gap: .5rem;
 }
+form, .note{
+  width: 100%;
+  height: fit-content;
 
-.input-box {
-  padding: 1rem;
+  background-color: #cecece;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  padding: 0.5rem;
   border-radius: 15px;
-
+  
   display: flex;
   flex-direction: column;
-  justify-content: center;
-
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  gap: .5rem;
 }
-
-.input-box > div {
-  padding: 0.3rem;
+.btn-box{
   display: flex;
   justify-content: space-around;
 }
-
-.input-box > input {
-  padding: 15px;
+.btn{
+  padding: 5px;
   border-radius: 15px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
-.btn {
-  padding: 4px 2px;
-}
-
-.notes-box {
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-  padding: 0.5rem;
-}
-.note,
-.input-box {
-  background-color: #ffffffeb;
-}
-
-.note {
+.notes-box{
+  width: 100%;
   display: flex;
   flex-direction: column;
-
-  
-  padding: 1rem;
-  border-radius: 15px;
-
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
-
-.btns {
-  width: 100%;
+.btns{
   display: flex;
   justify-content: space-between;
+  padding: 2%;
 }
 
-.btn-x {
-  padding: 3px;
+.btn-x{
+  border: none;
+  background-color: #cecece;
+  cursor: pointer;
 }
 
-label {
-  padding: 0.3rem;
-}
-footer>p {
+
+
+
+footer{
   text-align: center;
-  font-weight: bold;
+}
+
+
+@media (min-width:350px) {
+  form, .note{
+    width: 250px;
+  }
+}
+@media (min-width:550px) {
+  .notes-box{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
